action cable working

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-actioncable-provider": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
