--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-actioncable-provider": "^2.0.0",
+    "react-animated-weather": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-live-clock": "^3.1.0",
     "react-moment": "^0.9.2",
