--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-actioncable-provider": "^2.0.0",
@@ -13,7 +14,9 @@
     "react-moment": "^0.9.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "video-react": "^0.13.7"
   },
   "scripts": {
     "start": "react-scripts start",
