--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "react-dom": "^16.8.6",
     "react-live-clock": "^3.1.0",
     "react-moment": "^0.9.2",
+    "react-player": "^1.11.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "video-react": "^0.13.7"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
