stocks added, calendar cleaned up

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-ticker": "^1.1.2",
     "redux": "^4.0.1"
   },
   "scripts": {
